--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "express-edge": "^2.0.1",
     "express-ejs-layouts": "^2.5.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.15.6",
